change mergify.yml base branch to main
Signed-off-by: andy.lee <andy.lee@suse.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
 - name: Automatically open backport PR to release-harvester-v1.5
   conditions:
-    - base=master
+    - base=main
   actions:
     backport:
       branches:
