Replace sortablejs-vue3
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>
(cherry picked from commit a7b4366d7cf61b1b49f88a5111e19f6112af1f06)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "color": "4.2.3",
     "ip": "2.0.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
-    "sortablejs-vue3": "^1.2.11",
+    "vue-draggable-next": "^2.2.1",
     "yaml": "^2.5.1"
   },
   "resolutions": {
