--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -11,24 +11,25 @@ defaults:
     working-directory: ./
 
 jobs:
-  lint:
+  clear-yarn-cache:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Run tests
-        uses: ./.github/actions/lint
+      - name: Clear Yarn cache
+        run: |
+          yarn cache clean
+
   build-extension-charts:
-    needs:
-      - lint
+    needs: clear-yarn-cache 
     uses: rancher/dashboard/.github/workflows/build-extension-charts.yml@master
+    with:
+      target_branch: gh-pages
+      tagged_release: ${{ github.ref_name }}
     permissions:
       actions: write
       contents: write
       deployments: write
       pages: write
-    with:
-      target_branch: gh-pages
-      tagged_release: ${{ github.ref_name }}
+
