--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -17,22 +17,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: Run tests
-        uses: ./.github/actions/lint
-
-  clean-cache:
-    needs: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
 
       - name: clean yarn cache
         run: yarn cache clean
 
+      - name: Run tests
+        uses: ./.github/actions/lint
+
   build-extension-charts:
-    needs: clean-cache
+    needs:
+      - lint
     uses: rancher/dashboard/.github/workflows/build-extension-charts.yml@master
     permissions:
       actions: write
