--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -11,18 +11,36 @@ defaults:
     working-directory: ./
 
 jobs:
-  lint:
+  cache-dependencies:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 1
+
+      - name: cache yarn dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.yarn/cache
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: cache-dependencies
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
       - name: Run tests
         uses: ./.github/actions/lint
 
   build-extension-charts:
     needs:
       - lint
+      - cache-dependencies
     uses: rancher/dashboard/.github/workflows/build-extension-charts.yml@master
     permissions:
       actions: write
@@ -32,7 +50,3 @@ jobs:
     with:
       target_branch: gh-pages
       tagged_release: ${{ github.ref_name }}
-    steps:
-      - name: clear yarn cache
-        run: |
-          yarn cache clean
