--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -19,11 +19,14 @@ jobs:
           fetch-depth: 1
 
       - name: clean yarn cache
+        if: steps.check-changes.outputs.changed == 'true'
         run: |
+          yarn cache clean
           rm -rf ~/.yarn/cache
 
   lint:
     runs-on: ubuntu-latest
+    needs: clean-cache
     steps:
       - uses: actions/checkout@v4
         with:
