--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ip": "2.0.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "vue-draggable-next": "^2.2.1",
-    "yaml": "^2.5.1"
+    "yaml": "^2.5.1",
+    "core-js": "3.21.1"
   },
   "resolutions": {
     "@types/node": "~20.10.0",
