--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "ip": "2.0.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "vue-draggable-next": "^2.2.1",
-    "yaml": "^2.5.1",
-    "core-js": "3.21.1"
+    "yaml": "^2.5.1"
   },
   "resolutions": {
     "@types/node": "~20.10.0",
@@ -22,7 +21,6 @@
     "ejs": "3.1.9",
     "follow-redirects": "1.15.2",
     "glob": "7.2.3",
-    "glob-parent": "6.0.2",
     "json5": "2.2.3",
     "@types/lodash": "4.17.5",
     "merge": "2.1.1",
@@ -30,9 +28,7 @@
     "nth-check": "2.1.1",
     "qs": "6.11.1",
     "roarr": "7.0.4",
-    "semver": "7.5.4",
-    "@vue/cli-service/html-webpack-plugin": "^5.0.0",
-    "**/webpack": "5"
+    "semver": "7.5.4"
   },
   "scripts": {
     "dev": "NODE_ENV=dev ./node_modules/.bin/vue-cli-service serve",
