--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@rancher/shell": "3.0.1-rc.4",
+    "@rancher/shell": "3.0.2-rc.2",
     "cache-loader": "^4.1.0",
     "color": "4.2.3",
     "ip": "2.0.1",
@@ -21,6 +21,7 @@
     "ejs": "3.1.9",
     "follow-redirects": "1.15.2",
     "glob": "7.2.3",
+    "glob-parent": "6.0.2",
     "json5": "2.2.3",
     "@types/lodash": "4.17.5",
     "merge": "2.1.1",
@@ -28,7 +29,8 @@
     "nth-check": "2.1.1",
     "qs": "6.11.1",
     "roarr": "7.0.4",
-    "semver": "7.5.4"
+    "semver": "7.5.4",
+    "@vue/cli-service/html-webpack-plugin": "^5.0.0"
   },
   "scripts": {
     "dev": "NODE_ENV=dev ./node_modules/.bin/vue-cli-service serve",
