--- a/pkg/harvester/tsconfig.json
+++ b/pkg/harvester/tsconfig.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": true,
     "sourceMap": true,
     "baseUrl": ".",
     "preserveSymlinks": true,
