--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -25,3 +25,52 @@ jobs:
 
       - name: Run tests
         uses: ./.github/actions/lint
+
+  setup-target-branch:
+    runs-on: ubuntu-latest
+    outputs:
+      target_branch: ${{ steps.get-version.outputs.target_branch }}
+      version: ${{ steps.get-version.outputs.version }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Get the target branch
+        id: get-version
+        run: |
+          branch_name="${{ github.head_ref }}"
+          version=$(echo $branch_name | sed -E 's/release-harvester-v([0-9]+\.[0-9]+)/\1/')
+          target_branch="v${version}-head"
+          echo "target_branch=$target_branch" >> $GITHUB_ENV
+          echo "version=$version" >> $GITHUB_ENV
+          echo "::set-output name=target_branch::$target_branch"
+          echo "::set-output name=version::$version"
+
+      - name: Create target branch
+        run: |
+          git fetch --all
+          git checkout gh-pages
+
+          # Check if the branch exists, if not, create it
+          if git rev-parse --verify origin/${{ env.target_branch }} > /dev/null 2>&1; then
+            echo "Branch ${{ env.target_branch }} already exists"
+          else
+            echo "Creating target branch ${{ env.target_branch }}"
+            git checkout -b ${{ env.target_branch }}
+            git push origin ${{ env.target_branch }}
+          fi
+
+  build-extension-charts:
+    needs:
+      - lint
+      - setup-target-branch
+    uses: rancher/dashboard/.github/workflows/build-extension-charts.yml@master
+    with:
+      target_branch: ${{ needs.setup-target-branch.outputs.target_branch }}
+    permissions:
+      actions: write
+      contents: write
+      deployments: write
+      pages: write
