--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -35,18 +35,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          fetch-depth: 0  # Ensure all branches are available
 
       - name: Get the target branch
         id: get-version
         run: |
-          branch_name="${{ github.head_ref }}"
-          version=$(echo $branch_name | sed -E 's/release-harvester-v([0-9]+\.[0-9]+)/\1/')
-          target_branch="v${version}-head"
-          echo "target_branch=$target_branch" >> $GITHUB_ENV
-          echo "version=$version" >> $GITHUB_ENV
-          echo "::set-output name=target_branch::$target_branch"
-          echo "::set-output name=version::$version"
+          branch_name="${{ github.head_ref || github.ref_name }}"
+
+          if [[ "$branch_name" =~ ^release-harvester-v([0-9]+\.[0-9]+)$ ]]; then
+            version="${BASH_REMATCH[1]}"
+            target_branch="v${version}-head"
+
+            echo "version=$version" >> "$GITHUB_ENV"
+            echo "target_branch=$target_branch" >> "$GITHUB_ENV"
+            echo "version=$version" >> "$GITHUB_OUTPUT"
+            echo "target_branch=$target_branch" >> "$GITHUB_OUTPUT"
+          else
+            echo "Branch name does not match expected pattern" >&2
+            exit 1
+          fi
 
       - name: Create target branch
         run: |
@@ -58,8 +65,8 @@ jobs:
             echo "Branch ${{ env.target_branch }} already exists"
           else
             echo "Creating target branch ${{ env.target_branch }}"
-            git checkout -b ${{ env.target_branch }}
-            git push origin ${{ env.target_branch }}
+            git checkout -b "${{ env.target_branch }}"
+            git push origin "${{ env.target_branch }}"
           fi
 
   build-extension-charts:
