--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - 'release-harvester-v*'
     types:
-      - merged
+      - closed
 
 defaults:
   run:
@@ -20,9 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
       - name: Run tests
         uses: ./.github/actions/lint
 
@@ -30,56 +27,79 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       target_branch: ${{ steps.get-version.outputs.target_branch }}
-      version: ${{ steps.get-version.outputs.version }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Ensure all branches are available
-
+      - uses: actions/checkout@v4
       - name: Get the target branch
         id: get-version
         run: |
-          branch_name="${{ github.head_ref || github.ref_name }}"
-
-          if [[ "$branch_name" =~ ^release-harvester-v([0-9]+\.[0-9]+)$ ]]; then
-            version="${BASH_REMATCH[1]}"
-            target_branch="v${version}-head"
-
-            echo "version=$version" >> "$GITHUB_ENV"
-            echo "target_branch=$target_branch" >> "$GITHUB_ENV"
-            echo "version=$version" >> "$GITHUB_OUTPUT"
-            echo "target_branch=$target_branch" >> "$GITHUB_OUTPUT"
+          if [[ "${{ github.ref_name }}" =~ ^release-harvester-v([0-9]+\.[0-9]+)$ ]]; then
+            echo "target_branch=v${BASH_REMATCH[1]}-head" >> "$GITHUB_ENV"
+            echo "target_branch=v${BASH_REMATCH[1]}-head" >> "$GITHUB_OUTPUT"
           else
-            echo "Branch name does not match expected pattern" >&2
             exit 1
           fi
-
-      - name: Create target branch
+      - name: Create target branch if not exists
         run: |
           git fetch --all
-          git checkout gh-pages
-
-          # Check if the branch exists, if not, create it
-          if git rev-parse --verify origin/${{ env.target_branch }} > /dev/null 2>&1; then
-            echo "Branch ${{ env.target_branch }} already exists"
-          else
-            echo "Creating target branch ${{ env.target_branch }}"
+          if ! git rev-parse --verify origin/${{ env.target_branch }} > /dev/null 2>&1; then
             git checkout -b "${{ env.target_branch }}"
             git push origin "${{ env.target_branch }}"
           fi
 
   build-extension-charts:
-    needs:
-      - lint
-      - setup-target-branch
-    uses: rancher/dashboard/.github/workflows/build-extension-charts.yml@master
-    with:
-      target_branch: ${{ needs.setup-target-branch.outputs.target_branch }}
-      tagged_release: false
-      is_test: true
+    needs: setup-target-branch
+    runs-on: ubuntu-latest
     permissions:
-      actions: write
       contents: write
-      deployments: write
-      pages: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Enable Corepack
+        run: corepack enable
+      - name: Setup Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.8.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          cache: yarn
+          node-version-file: '.nvmrc'
+      - name: Install dependencies
+        run: yarn
+      - name: Run build script
+        run: yarn publish-pkgs -s ${{ github.repository }} -b ${{ needs.setup-target-branch.outputs.target_branch }}
+      - name: Upload charts artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: charts
+          path: tmp
+
+  release:
+    needs: build-extension-charts
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: '${{ needs.setup-target-branch.outputs.target_branch }}'
+      - name: Configure Git
+        run: |
+          git config user.name 'github-actions[bot]'
+          git config user.email 'github-actions[bot]@users.noreply.github.com'
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: charts
+      - name: Commit build
+        run: |
+          git add ./{assets,charts,extensions,index.yaml}
+          git commit -m "CI Build Artifacts"
+          git push
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.4.1
+        with:
+          charts_dir: ./charts/*
+        env:
+          CR_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+          CR_SKIP_EXISTING: true
