--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Run build script
         run: yarn publish-pkgs -s ${{ github.repository }} -b ${{ needs.setup-target-branch.outputs.target_branch }}
       - name: Upload charts artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4  # Updated to v4
         with:
           name: charts
           path: tmp
@@ -88,14 +88,14 @@ jobs:
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
       - name: Download build artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: charts
       - name: Commit build
         run: |
           git add ./{assets,charts,extensions,index.yaml}
           git commit -m "CI Build Artifacts"
-          git push
+          git push origin ${{ needs.setup-target-branch.outputs.target_branch }}
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
         with:
