--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - 'release-harvester-v*'
     types:
-      - closed
+      - merged
 
 defaults:
   run:
@@ -43,6 +43,7 @@ jobs:
           fi
       - name: Create target branch if not exists
         run: |
+          echo "Checking if target branch exists: ${{ env.target_branch }}"
           git fetch --all
           if ! git rev-parse --verify origin/${{ env.target_branch }} > /dev/null 2>&1; then
             echo "Target branch doesn't exist, creating it"
@@ -59,8 +60,12 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: '${{ needs.setup-target-branch.outputs.target_branch }}'  # Ensures the correct branch is checked out
       - name: Enable Corepack
-        run: corepack enable
+        run: |
+          echo "Enabling Corepack"
+          corepack enable
       - name: Setup Helm
         uses: azure/setup-helm@v3
         with:
@@ -71,14 +76,19 @@ jobs:
           cache: yarn
           node-version-file: '.nvmrc'
       - name: Install dependencies
-        run: yarn
+        run: |
+          echo "Installing dependencies"
+          yarn
       - name: Run build script
-        run: yarn publish-pkgs -s ${{ github.repository }} -b ${{ needs.setup-target-branch.outputs.target_branch }}
+        run: |
+          echo "Running build script"
+          yarn publish-pkgs -s ${{ github.repository }} -b ${{ needs.setup-target-branch.outputs.target_branch }}
       - name: Upload charts artifact
         uses: actions/upload-artifact@v4
         with:
           name: charts
           path: tmp
+        run: echo "Uploading build artifacts"
 
   release:
     needs: build-extension-charts
@@ -88,17 +98,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: '${{ needs.setup-target-branch.outputs.target_branch }}'
+          ref: '${{ needs.setup-target-branch.outputs.target_branch }}'  # Ensures the correct branch is checked out
       - name: Configure Git
         run: |
+          echo "Configuring Git user"
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: charts
+        run: echo "Downloading build artifact"
       - name: Commit build
         run: |
+          echo "Committing build artifacts to branch ${{ needs.setup-target-branch.outputs.target_branch }}"
           git add ./{assets,charts,extensions,index.yaml}
           git commit -m "CI Build Artifacts"
           git push origin ${{ needs.setup-target-branch.outputs.target_branch }}
@@ -109,3 +122,4 @@ jobs:
         env:
           CR_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           CR_SKIP_EXISTING: true
+        run: echo "Running chart-releaser"
