--- a/.github/workflows/build-extension-charts-on-pr-merge.yml
+++ b/.github/workflows/build-extension-charts-on-pr-merge.yml
@@ -82,7 +82,9 @@ jobs:
           path: tmp
 
   release:
-    needs: build-extension-charts
+    needs: |
+      setup-target-branch
+      build-extension-charts
     runs-on: ubuntu-latest
     permissions:
       contents: write
