--- a/.github/workflows/auto-add-backport-label.yaml
+++ b/.github/workflows/auto-add-backport-label.yaml
@@ -2,21 +2,21 @@ name: Auto Backport Label
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, reopened]
 
 jobs:
   add-backport-label:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Fetch release branches
+      - name: Fetch all branches via GitHub API
         id: fetch_release_branches
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
 
-          all_branches=$(gh api repos/${{ github.repository }}/branches --jq '.[].name' 2>/dev/null || echo "")
+          all_branches=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/${{ github.repository }}/branches" | jq -r '.[].name')
 
           if [[ -z "$all_branches" ]]; then
             echo "No branches found or failed to fetch."
@@ -35,8 +35,10 @@ jobs:
           latest_branch=$(echo "$release_branches" | sort -Vr | head -n1)
           echo "latest_branch=$latest_branch" >> $GITHUB_OUTPUT
 
-      - name: Determine if backport label is needed
+      - name: Determine if backport label is required
         id: check_backport_label
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
           latest_branch="${{ steps.fetch_release_branches.outputs.latest_branch }}"
@@ -51,10 +53,11 @@ jobs:
           version_with_patch="${version}.0"
           echo "Detected latest release version: $version_with_patch"
 
-          tag_exists=$(gh api repos/${{ github.repository }}/releases --jq '.[].tag_name' 2>/dev/null | grep -x "v${version_with_patch}" || true)
+          tag_exists=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/${{ github.repository }}/releases" | jq -r '.[].tag_name' | grep -x "v${version_with_patch}" || true)
 
           if [[ -z "$tag_exists" ]]; then
-            echo "Release tag v$version_with_patch not found; require backport label."
+            echo "Release tag v$version_with_patch not found; backport label required."
             echo "should_label=true" >> $GITHUB_OUTPUT
             echo "backport_label=require backport/v${version}" >> $GITHUB_OUTPUT
           else
@@ -64,6 +67,8 @@ jobs:
 
       - name: Get existing PR labels
         id: get_pr_labels
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pr_number=${{ github.event.pull_request.number }}
           labels=$(gh pr view "$pr_number" --json labels --jq '.labels[].name' || echo "")
