--- a/.github/workflows/backport-label.yaml
+++ b/.github/workflows/backport-label.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}
 
       - name: Fetch release branches and PR labels
         id: fetch_info
