ci: use pull_request_target
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/.github/workflows/backport-request.yaml
+++ b/.github/workflows/backport-request.yaml
@@ -1,7 +1,7 @@
 name: "[PR Management] Request Backport via Mergify"
 
 on:
-  pull_request:
+  pull_request_target:
     types: [closed]
     branches: [main]
 
@@ -13,6 +13,11 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}
+
       - name: Post Mergify backport command
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
