ci: skip draft PR
Signed-off-by: Yi-Ya Chen <yiya.chen@suse.com>

--- a/.github/workflows/auto-assign-reviewer.yaml
+++ b/.github/workflows/auto-assign-reviewer.yaml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   auto-assign:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
     - uses: rancher/gh-issue-mgr/auto-assign-action@main
