--- a/.github/workflows/backport-label.yaml
+++ b/.github/workflows/backport-label.yaml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   add-backport-label:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
