--- a/.github/workflows/auto-assign-reviewer.yaml
+++ b/.github/workflows/auto-assign-reviewer.yaml
@@ -12,7 +12,7 @@ jobs:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
-        uses: rancher/gh-issue-mgr/auto-assign-action@main
+      - uses: rancher/gh-issue-mgr/auto-assign-action@main
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/auto-assign-config.yaml
